--- a/Assignment-2/style.css
+++ b/Assignment-2/style.css
@@ -62,9 +62,9 @@ body{
 .box2-btn{
     border: 0;
     background-color: white;
-    padding: 12px;
+    padding: 12px 19px;
     border-radius: 20px;
-    font-size: 15px;
+    font-size: 14px;
 }
 .box3{
     position: relative;
@@ -79,21 +79,18 @@ body{
     text-align: center;
     padding: 4px;
     bottom: 40px;
-}
-.box3-content h1{
     color: white;
 }
+
 .search-bar{
     width: 100%;
     display: inline-flex;
     margin-left: 50px;
-    background-color: white;
 }
-.select select{
+.select1{
     width: 150px;
     border: 1px solid lightgray;
     padding: 10px;
-    background-color: white;
     border-top-left-radius: 7px;
     border-bottom-left-radius: 7px;
 }
@@ -101,10 +98,10 @@ body{
     display: inline-flex;
 }
 .search-img{
-    background-color: white;
     display: inline-block;
     width: 5%;
     padding: 9px;
+    background-color: white;
     border: 1px solid lightgray;
     margin: 0;
 }
@@ -114,3 +111,39 @@ body{
     border-bottom-right-radius: 7px;
     width: 60%
 }
+.box4{
+    width: 550px;
+    margin: 50px auto;
+    border: 20px solid lightgray;
+    border-bottom: none;
+    
+}
+.images{
+    background-color: lightgray;
+    position: relative;
+}
+.box4-bg{
+    width: 100%;
+    height: 170px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+   
+}
+.box4-profile{
+    position: absolute;
+    width: 130px;
+    object-fit: cover;
+    border-radius: 50%;
+    bottom: -70px;
+    left: 198px;
+    border: 5px solid white;
+}
+.box4-content{
+    text-align: center;
+    margin-top: 95px;
+}
+.box4-content p{
+    color: rgb(95,95,95);
+    font-size: 20px; 
+}
+
